--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="icon" href="./favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta
@@ -49,16 +49,30 @@
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
 
+<!--
 <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+-->
+<script src="../node_modules/react/umd/react.production.min.js" crossorigin></script>
 
+<!--
 <script
         src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
         crossorigin></script>
+-->
+<script src="../node_modules/react-dom/umd/react-dom.production.min.js" crossorigin></script>
 
+
+<!--
 <script
         src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
         crossorigin></script>
+-->
+<script src="../node_modules/react-bootstrap/dist/react-bootstrap.min.js" crossorigin></script>
 
+
+
+<!--
 <script>var Alert = ReactBootstrap.Alert;</script>
+-->
 </body>
 </html>
