add noUiSlider component to use with DamsQueryConstructor

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Quicksand:wght@500&display=swap"
           rel="stylesheet">
 
-<!--    <link href="nouislider.css" rel="stylesheet">-->
-<!--    <script src="nouislider.js"></script>-->
+    <script src="js/nouislider.js"></script>
 
     <title>SUSTAIN Dataset Explorer</title>
 </head>
